[gd_scene load_steps=11 format=3 uid="uid://c566mi0ppmg2g"]

[ext_resource type="Script" uid="uid://cuvnvs8opxrrg" path="res://scripts/InfoPanel.gd" id="1_0ec8g"]
[ext_resource type="StyleBox" uid="uid://dvwei0lhsf8p3" path="res://themes/boxflat2.tres" id="1_mccuv"]
[ext_resource type="Texture2D" uid="uid://be1e0swdjaaxb" path="res://assets/mage1/mage1_portrait.png" id="2_0ec8g"]
[ext_resource type="LabelSettings" uid="uid://de705pwk1itxt" path="res://themes/spell_lbl.tres" id="3_18g4i"]
[ext_resource type="Texture2D" uid="uid://cu4rtgc138pk4" path="res://assets/mage2/mage2_portrait.png" id="4_4tbpf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mccuv"]
bg_color = Color(0.341176, 0.341176, 0.341176, 0.92549)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ec8g"]
bg_color = Color(0.380757, 0.628547, 0.141524, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u7em1"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.644442, 0.531617, 0.324611, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.155592, 0.0867232, 0.00752309, 1)
border_blend = true
corner_radius_bottom_left = 8
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_18g4i"]
bg_color = Color(0.347817, 0.347817, 0.347817, 0.937255)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4tbpf"]
bg_color = Color(0.912943, 0.267876, 0.258025, 1)

[node name="InfoPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ec8g")

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 1
offset_right = 460.0
offset_bottom = 120.0
theme_override_styles/panel = ExtResource("1_mccuv")

[node name="MarginContainer" type="MarginContainer" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="PlayerPortrait" type="TextureRect" parent="PlayerPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_0ec8g")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerPanel/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="PlayerLbl" type="Label" parent="PlayerPanel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Player"
label_settings = ExtResource("3_18g4i")

[node name="PlayerHP" type="ProgressBar" parent="PlayerPanel/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_mccuv")
theme_override_styles/fill = SubResource("StyleBoxFlat_0ec8g")
value = 100.0
fill_mode = 1

[node name="EnemyPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -460.0
offset_bottom = 120.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_u7em1")

[node name="MarginContainer" type="MarginContainer" parent="EnemyPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="EnemyPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="VBoxContainer" type="VBoxContainer" parent="EnemyPanel/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="EnemyLbl" type="Label" parent="EnemyPanel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Enemy"
label_settings = ExtResource("3_18g4i")
horizontal_alignment = 1

[node name="EnemyHP" type="ProgressBar" parent="EnemyPanel/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_18g4i")
theme_override_styles/fill = SubResource("StyleBoxFlat_4tbpf")
value = 100.0
fill_mode = 1

[node name="EnemyPortrait" type="TextureRect" parent="EnemyPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_4tbpf")
expand_mode = 2
